# CLauseIQ

./: README.md
.github/workflows/: main_clauseiq-backend.yml  main_clauseiq.yml
backend/: .env.example  .fastapicloudignore  .gitignore  main.py  pyproject.toml  render.yml  requirements.txt
backend/app/api/: routes.py
backend/app/core/: config.py  pipeline.py
backend/app/models/: schemas.py
backend/app/services/: document_loader.py  embedder.py  embedding_model.py  llm.py  retriever.py
frontend/: index.html
