[project]
name = "clauseiq-backend"
version = "0.1.0"
description = "FastAPI backend for ClauseIQ."
requires-python = ">=3.11,<3.13"
dependencies = [
    "fastapi[standard]",
    "uvicorn[standard]",
    "gunicorn",
    "pydantic-settings",
    "pdfplumber",
    "requests",
    "sentence-transformers",
    "faiss-cpu",
    "numpy",
    "python-docx",
    "python-dotenv",
    "python-multipart",
    "gitignore-generator",
]

[tool.uv]
package = false
